# specify-cli

./: .gitignore  README.md  pylock.toml  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/plans/: specify-cli.md
.specify/: README.md
.specify/integrations/: agy.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/verification/: README.md
.specify/verification/plans/: example-plan.md
.specify/verification/templates/: sample-check.md  verification-checklist-template.md  verification-outcome-template.md  verification-plan-template.md
src/specify_cli/: __init__.py
src/specify_cli/commands/: check.py  init.py
src/specify_cli/integrations/: __init__.py  amazonq.py  base.py  cursor.py
src/specify_cli/scripts/bash/: create-new-feature.sh  setup-plan.sh  update-agent-context.sh
src/specify_cli/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
src/specify_cli/templates/commands/: speckit-analyze.md  speckit-checklist.md  speckit-clarify.md  speckit-constitution.md  speckit-implement.md  speckit-plan.md  speckit-specify.md  speckit-tasks.md  speckit-taskstoissues.md
src/specify_cli/templates/skills/: speckit-analyze.md  speckit-checklist.md  speckit-clarify.md  speckit-constitution.md  speckit-implement.md  speckit-plan.md  speckit-specify.md  speckit-tasks.md  speckit-taskstoissues.md
src/specify_cli/verification/: __init__.py  amazonq.py  base.py  checker.py  cursor.py  runner.py  scaffold.py
tests/: conftest.py  test_check.py  test_init.py  test_verification_scaffold.py
