[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specify-cli"
version = "0.1.0"
description = "Specify CLI tool"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
specify-cli = "specify_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"src/specify_cli/templates" = "templates"
"src/specify_cli/scripts" = "scripts"

[tool.hatch.build.targets.sdist]
include = [
    "/src/specify_cli",
    "/tests",
]
